rename zodb files

--- a/development.ini
+++ b/development.ini
@@ -11,7 +11,7 @@ pyramid.includes = pyramid_debugtoolbar
                    pyramid_zodbconn
                    pyramid_tm
 tm.attempts = 3
-zodbconn.uri = file://%(here)s/Data.fs?connection_cache_size=20000
+zodbconn.uri = file://%(here)s/pycraftdev-zodb.fs?connection_cache_size=20000
 
 [server:main]
 use = egg:Paste#http
