--- a/production.ini
+++ b/production.ini
@@ -10,7 +10,7 @@ pyramid.default_locale_name = en
 pyramid.includes = pyramid_tm
                    pyramid_zodbconn
 tm.attempts = 3
-zodbconn.uri = file://%(here)s/Data.fs?connection_cache_size=20000
+zodbconn.uri = file://%(here)s/pycraft-zodb.fs?connection_cache_size=20000
 
 [server:main]
 use = egg:Paste#http
