--- a/development.ini
+++ b/development.ini
@@ -17,6 +17,7 @@ zodbconn.uri = file://%(here)s/pycraftdev-zodb.fs?connection_cache_size=20000
 use = egg:Paste#http
 host = 0.0.0.0
 port = 6543
+ssl_pem = *
 
 # Begin logging configuration
 
